# double-brained

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  compose.yaml  docker-compose.prod.yml  pyproject.toml
.github/workflows/: deploy_vps_manual.yml
contract/: openapi.json
scripts/: deploy_prod.sh
tests/architecture/: import_boundaries.py  test_import_boundaries.py
tests/bootstrap/: conftest.py  test_api_captures.py  test_api_v1.py  test_digest_panel.py  test_edit_panel.py  test_health.py  test_healthcheck.py  test_identity_cli.py  test_inbox_status.py  test_indexing_worker.py  test_local_image_worker.py  test_local_polling.py  test_local_voice_worker.py  test_memory_panel.py  test_memory_worker.py  test_openapi_contract.py  test_panel_followup.py  test_project_panel.py  test_record_view_panel.py  test_search_panel.py  test_task_panel.py  test_telegram_image_capture.py  test_telegram_inbox_step.py  test_telegram_voice_capture.py  test_telegram_webhook.py
tests/capture/: __init__.py  test_capture_api_columns.py  test_capture_rls.py  test_capture_text.py  test_image_capture_rls.py  test_telegram_text_capture_integration.py  test_voice_capture_rls.py
tests/classification/: test_classification_persistence.py  test_classification_worker.py  test_extraction.py  test_ollama_adapter.py  test_openrouter_adapter.py  test_structured_output.py
tests/contacts/: test_contact_intake_integration.py  test_contact_matching.py  test_contact_rls.py  test_reminder_enrichment.py
tests/editing/: test_edit_rls.py  test_record_edit_integration.py
tests/identity/: conftest.py  locale_fakes.py  test_access_context_integration.py  test_api_token_bot_flow.py  test_api_tokens.py  test_atomic_update_processing.py  test_database_roles.py  test_digest_updates.py  test_domain_contracts.py  test_edit_record_updates.py  test_edited_at_schema_reconcile.py  test_enrollment_integration.py  test_identity_cli_integration.py  test_image_schema_reconcile.py  test_invite_bot_flow.py  test_language_selection_updates.py  test_member_invite_enrollment.py  test_memory_mode_updates.py  test_message_catalog.py  test_multi_user_schema.py  test_postgres_constraints.py  test_receipts_and_polling.py  test_result_kind_check_reconcile.py  test_schema_reset_bootstrap.py  test_show_record_updates.py  test_telegram_inbox_queue.py  test_telegram_presenter.py  test_user_space_language.py
tests/knowledge/: conftest.py  test_knowledge_domain.py  test_knowledge_rls.py
tests/memory/: test_answer_question.py  test_application_contracts_repr.py  test_memory_ask_concurrency.py  test_memory_persistence.py  test_memory_rls.py  test_openrouter_reasoning.py  test_prompt_builder.py  test_reasoning_contract.py  test_render.py  test_secret_scan_shared.py  test_status_model.py
tests/processing/: test_faster_whisper.py  test_image_worker.py  test_indexing_steps.py  test_local_image_storage.py  test_local_voice_storage.py  test_mlx_whisper.py  test_processing_domain.py  test_processing_rls.py  test_telegram_voice_adapter.py  test_voice_worker.py
tests/projects/: conftest.py  test_project_capture_inheritance.py  test_project_domain.py  test_project_persistence.py  test_project_rls.py  test_telegram_projects_integration.py
tests/reminders/: test_reminder_capture_integration.py  test_reminder_delivery.py  test_reminder_rls.py  test_time_extractor.py
tests/retrieval/: embedding_fakes.py  test_digest.py  test_e5_adapter.py  test_e5_chunking.py  test_exact_search.py  test_hybrid_retrieval.py  test_list_image_marks.py  test_record_view.py  test_search_rls.py  test_semantic_index_persistence.py  test_semantic_index_rls.py  test_telegram_digest_integration.py  test_telegram_search_integration.py  test_telegram_show_record_integration.py
tests/shared/: test_i18n.py  test_trace.py
tests/tasks/: test_capture_channel_routing.py  test_pending_task_mode.py  test_pending_task_mode_persistence.py  test_task_domain.py  test_task_panel.py  test_task_rls.py  test_telegram_task_capture_integration.py  (+1 more)
(+179 files in other folders)
