[build-system]
requires = ["hatchling>=1.27,<2"]
build-backend = "hatchling.build"

[project]
name = "second-brain"
version = "0.1.0"
description = "Personal system of memory and action"
readme = "README.md"
requires-python = ">=3.13,<3.14"
dependencies = [
  "aiogram>=3,<4",
  "asyncpg>=0.30,<1",
  "fastapi>=0.115,<1",
  "greenlet>=3,<4",
  "mlx-whisper>=0.4.3,<0.5",
  "sqlalchemy>=2,<3",
  "uvicorn>=0.30,<1",
]

[project.scripts]
second-brain-identity = "second_brain.bootstrap.identity_cli:main"
second-brain-local-polling = "second_brain.bootstrap.local_polling:main"
second-brain-local-voice-worker = "second_brain.bootstrap.local_voice_worker:main"

[dependency-groups]
dev = [
  "httpx>=0.28,<1",
  "mypy>=1.13,<2",
  "pytest>=8.3,<9",
  "pytest-asyncio>=0.25,<1",
  "ruff>=0.8,<1",
]

[tool.hatch.build.targets.wheel]
packages = ["src/second_brain"]

[tool.pytest.ini_options]
addopts = "-ra"
testpaths = ["tests"]

[tool.ruff]
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
files = ["src"]
strict = true
