[build-system]
requires = ["hatchling>=1.27,<2"]
build-backend = "hatchling.build"

[project]
name = "second-brain"
version = "0.1.0"
description = "Personal system of memory and action"
readme = "README.md"
requires-python = ">=3.13,<3.14"
dependencies = [
  "aiogram>=3,<4",
  "asyncpg>=0.30,<1",
  "dateparser>=1.2,<2",
  "faster-whisper>=1.2,<2",
  "fastapi>=0.115,<1",
  "greenlet>=3,<4",
  "pgvector>=0.4,<1",
  "sentence-transformers>=5,<6",
  "sqlalchemy>=2,<3",
  # torch is declared directly (though pulled by sentence-transformers) so the
  # [tool.uv.sources] CPU-index pin below applies — uv sources only affect
  # direct dependencies. macOS resolves the ordinary PyPI wheel.
  "torch>=2,<3",
  "uvicorn>=0.30,<1",
]

[project.scripts]
second-brain-identity = "second_brain.bootstrap.identity_cli:main"
second-brain-local-polling = "second_brain.bootstrap.local_polling:main"
second-brain-local-voice-worker = "second_brain.bootstrap.local_voice_worker:main"
second-brain-healthcheck = "second_brain.bootstrap.healthcheck:main"
second-brain-inbox-status = "second_brain.bootstrap.inbox_status:main"
second-brain-openapi = "second_brain.bootstrap.openapi_dump:main"

[dependency-groups]
dev = [
  "httpx>=0.28,<1",
  "mypy>=1.13,<2",
  "pytest>=8.3,<9",
  "pytest-asyncio>=0.25,<1",
  "ruff>=0.8,<1",
  "types-dateparser>=1.2,<2",
]

[tool.hatch.build.targets.wheel]
packages = ["src/second_brain"]

# CPU-only torch on Linux (no GPU on the VPS). sentence-transformers pulls torch;
# the default PyPI Linux wheel drags the CUDA/nvidia/triton stack (~5+ GB). Pin
# the CPU wheel from the PyTorch index for Linux only. macOS keeps the ordinary
# PyPI arm64 wheel (no marker match), so local voice/tests are untouched.
[tool.uv.sources]
torch = [{ index = "pytorch-cpu", marker = "sys_platform == 'linux'" }]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[tool.pytest.ini_options]
addopts = "-ra"
testpaths = ["tests"]

[tool.ruff]
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
files = ["src"]
strict = true
